[tool.poetry]
name = "sonolus-fastapi"
version = "0.1.0"
description = ""
authors = ["dsgamer777@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = {extras = ["cli"], version = "^0.19.0"}
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
gunicorn = "^20.1.0"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pysen = {version = "0.9.1", extras = ["lint"]}
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.taskipy.tasks]
start = { cmd = "uvicorn src.main:app --reload", help = "launch test server" }

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
